# Mira

./: .gitignore  .gitmodules  Build.bat  CMakeLists.txt  CMakePresets.json  Clean.bat  Compile.bat  Cyan.sln  DebugRun.bat  Generate.bat  GenerateProjectFiles.bat  GenerateSolution.bat  README.md  STuff to add.txt  build.sh  compile_commands.json  premake5.lua  run.sh  sshkey  sshkey.pub
BaseEngine/: CMakeLists.txt  premake5.lua
BaseEngine/Includes/Core/: Core.hpp  Engine.hpp
BaseEngine/Includes/Events/: Event.hpp  EventDispatcher.hpp  EventSystem.hpp
BaseEngine/Includes/Input/: Input.hpp  InputState.hpp  KeyBoard.hpp  ScanCodes.hpp
BaseEngine/Includes/Layers/: Layer.hpp  LayerManager.hpp
BaseEngine/Includes/Logging/: Log.hpp
BaseEngine/Includes/Public/: MiraEngine.hpp
BaseEngine/Includes/Window/: SDLWindow.hpp  Window.hpp
BaseEngine/Sources/: Engine.cpp  Input.cpp  InputState.cpp  LayerManager.cpp  SDLWindow.cpp  Window.cpp
BaseEngine/shader/: DefPS.hlsl  DefVS.hlsl
BaseEngine/src/: MiraEngine.h  MiraEngine.hpp  MiraPch.cpp  MiraPch.h  MiraPch.hpp
BaseEngine/src/Mira/Camera/: Camera.h  Camera.hpp  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCamera.hpp  PerspectiveCamera.cpp  PerspectiveCamera.hpp
BaseEngine/src/Mira/Components/: RenderComponent.h  TransformComponent.h
BaseEngine/src/Mira/Core/: Assert.hpp  Core.h  Core.hpp  Engine.cpp  Engine.h  Engine.hpp  Game.hpp  Main.h  Main.hpp  MemoryType.h
BaseEngine/src/Mira/EngineComponents/: Clock.hpp  Component.hpp  Layer.hpp  LayerManager.cpp  LayerManager.hpp
BaseEngine/src/Mira/EngineComponents/Layer/: ImGuiLayer.cpp  ImGuiLayer.hpp  Layer.hpp  LayerManager.cpp  LayerManager.hpp
BaseEngine/src/Mira/Event/: Event.h  Event.hpp  KeyboardEvent.h  KeyboardEvent.hpp  MouseEvent.h  MouseEvent.hpp  WindowEvent.h  WindowEvent.hpp
BaseEngine/src/Mira/GameObject/: GameObject.h
BaseEngine/src/Mira/Input/: Input.cpp  Input.h  Input.hpp  InputCodes.h
BaseEngine/src/Mira/Logger/: Logger.cpp  Logger.h  Logger.hpp
BaseEngine/src/Mira/Math/: Rot3.hpp  Vec2.hpp  Vec2D.h  Vec2D.hpp  Vec3.hpp  Vec3D.h  Vec3D.hpp
BaseEngine/src/Mira/Renderer/: InstanceManager.cpp  InstanceManager.h  InstanceManager.hpp  Material.cpp  Material.h  Material.hpp  Mesh.cpp  Mesh.h  Mesh.hpp  RenderResourceManager.cpp  RenderResourceManager.hpp  Renderer.cpp  Renderer.h  Renderer.hpp  Vertex.h  Vertex.hpp
BaseEngine/src/Mira/Renderer/RHI/: ConstantBuffer.cpp  ConstantBuffer.h  ConstantBuffer.hpp  IndexBuffer.cpp  IndexBuffer.h  IndexBuffer.hpp  InputLayout.h  RHI.cpp  RHI.h  RHI.hpp  Shader.cpp  Shader.h  Shader.hpp  ShaderType.h  Texture.cpp  Texture.h  Texture.hpp  VertexBuffer.cpp  VertexBuffer.h  VertexBuffer.hpp  stb_image.cpp
BaseEngine/src/Mira/Renderer/RHI/D3D11/: D3D11ConstantBuffer.cpp  D3D11ConstantBuffer.h  D3D11ConstantBuffer.hpp  D3D11IndexBuffer.cpp  D3D11IndexBuffer.h  D3D11IndexBuffer.hpp  D3D11RHI.cpp  D3D11RHI.h  D3D11RHI.hpp  D3D11Resource.h  D3D11Resource.hpp  D3D11Shader.cpp  D3D11Shader.h  D3D11Shader.hpp  D3D11Texture.cpp  D3D11Texture.h  D3D11Texture.hpp  D3D11VertexBuffer.cpp  D3D11VertexBuffer.h  D3D11VertexBuffer.hpp  D3DError.hpp
BaseEngine/src/Mira/Renderer/RHI/VkRHI/: VkRHI.hpp  VkRHi.cpp
BaseEngine/src/Mira/Stats/: EngineStats.hpp
BaseEngine/src/Mira/Window/: GlfwWindow.cpp  GlfwWindow.hpp  WIN32Window.cpp  WIN32Window.h  Window.cpp  Window.h  Window.hpp  WindowTools.h  WindowTools.hpp
Cyan/: Cyan.vcxproj  Cyan.vcxproj.filters  Engine.hpp  cpp.hint
Cyan/src/: Cyan.hpp  PreCompHeaders.cpp  PreCompHeaders.hpp
Cyan/src/Cyan/: Entry.hpp  GWindow.cpp  GWindow.hpp  Game.cpp  Game.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Log.cpp  Log.hpp  core.hpp
Engine/Shaders/: PixelShader.hlsl  VertexShader.hlsl
Engine/Sources/: MiraEngine.h  MiraEngine.hpp  PreCompHeader.cpp  PreCompHeader.hpp
Engine/Sources/Components/: Camera.cpp  Camera.hpp  Component.hpp  RenderComponent.hpp  Transform.cpp  Transform.hpp  TransformComponent.hpp
Engine/Sources/Core/: Core.h  Engine.cpp  Engine.h  Engine.hpp  GameApp.cpp  GameApp.h  Main.h  Main.hpp  WindowAttributes.cpp  WindowAttributes.h
Engine/Sources/Entity/: Cube.cpp  Cube.hpp  Drawable.hpp  Entity.cpp  Entity.hpp
Engine/Sources/Input/: Input.cpp  Input.h  Input.hpp  KeyCodes.hpp
Engine/Sources/Layers/: ImGuiLayer.cpp  ImGuiLayer.h  ImGuiLayer.hpp  Layer.h  Layer.hpp  LayerStack.cpp  LayerStack.h  (+1 more)
Engine/shader/: DefPS.hlsl  DefVS.hlsl
Engine/sources/: MiraEngine.h  MiraPreCompHeader.h
Engine/src/: Engine.h
EngineComponents/: premake5.lua
Game/: CMakeLists.txt  Game.vcxproj  Game.vcxproj.filters  premake5.lua
Game/Sources/: Main.cpp
Game/shader/: DefaultPS.cso  DefaultPS.hlsl  DefaultVS.cso  DefaultVS.hlsl
Game/src/: GameProj.cpp  Sandbox.cpp  main.cpp
Grass/: imgui.ini
Grass/Configs/: WinConfig.json
Grass/Sources/: main.cpp
MiraEngine/sources/: MiraEngine.h  MiraPreCompHeader.cpp  MiraPreCompHeader.h
MiraEngine/src/: MiraEngine.h  MiraPreCompHeader.h
Renderer/: CMakeLists.txt  premake5.lua
Renderer/Includes/Private/: Dx11GraphicsFactory.hpp  Dx11IndexBuffer.hpp  Dx11RenderAPI.hpp  Dx11VertexBuffer.hpp  stb_image.h
Renderer/Includes/Private/Dx11/: Dx11ConstantBuffer.hpp  Dx11GraphicsFactory.hpp  Dx11RenderAPI.hpp  Dx11Shader.hpp  Dx11Texture.hpp  DxError.hpp
Renderer/Includes/Public/: ConstantBuffer.hpp  CoreAPI.hpp  GPUInfo.hpp  GraphicsAPI.hpp  GraphicsFactory.hpp  IndexBuffer.hpp  InputLayout.hpp  RenderAPI.hpp  Shader.hpp  ShaderType.hpp  Texture.hpp  VertexBuffer.hpp  WindowHandle.hpp
Renderer/Sources/: Dx11ConstantBuffer.cpp  Dx11GraphicsFactory.cpp  Dx11IndexBuffer.cpp  Dx11RenderAPI.cpp  Dx11Shader.cpp  Dx11VertexBuffer.cpp  GraphicsFactory.cpp  stb_image.cpp
Renderer/Sources/Dx11/: Dx11ConstantBuffer.cpp  Dx11GraphicsFactory.cpp  Dx11IndexBuffer.cpp  Dx11RenderAPI.cpp  Dx11Shader.cpp  Dx11Texture.cpp  Dx11VertexBuffer.cpp
Sandbox/: CMakeLists.txt
Sandbox/shader/: DefPS.hlsl  DefVS.hlsl
Sandbox/sources/: main.cpp
Sandbox/src/: Main.cpp  Sandbox.cpp  main.cpp  main.cpp.txt
(+257 files in other folders)
